# normaai

./: .env.example  .gitignore  ACCOUNT_DELETION_FIX.md  ANDROID_SIGNING.md  AUTHENTICATION_ARCHITECTURE.md  AUTHENTICATION_FIXES.md  Apple app-specific password.txt  CLAUDE.md  CONTRACT_GENERATION_BACKEND_GUIDE.md  CONTRACT_GENERATION_IMPLEMENTATION_SUMMARY.md  DEEP_LINKS_SETUP.md  DESKTOP_UPDATER_SETUP.md  EMAIL_VERIFICATION_BUG_FIX.md  EMAIL_VERIFICATION_CONFIRMED.md  EMAIL_VERIFICATION_IMPLEMENTATION.md  GoogleSignInPlugin.swift  ICON_GENERATION.md  IMPLEMENTATION_SUMMARY.md  IN_APP_PURCHASES.md  IOS_CRASH_TROUBLESHOOTING.md  IOS_GOOGLE_SIGNIN_FIX.md  IOS_WEBVIEW_FIX.md  MIGRATION_LOGIN_REQUIRED.md  Norma Plans thinking.txt  Norma device_fingerprint trial abuse brainstorm.txt  OAUTH_FINAL_SOLUTION.md  OAUTH_FIX_FINAL.md  OAUTH_PKCE_IMPLEMENTATION.md  README.md  REMAINING_BACKEND_CHANGES.md  RESEND_MIGRATION.md  SECURITY.md  SUPABASE_SETUP.md  TESTFLIGHT-GUIDE.md  fly-secrets-setup.md  index.html  package-lock.json  package.json  paragraf_scrapper.py  test-device-fingerprint.js  (+1 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: desktop-release.yml  ios.yml
backend/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  fly.toml
backend/migrations/: 001_supabase_auth_integration.sql  002_remove_device_fingerprint.sql  003_add_user_sessions.sql  003_rollback.sql  004_migrate_premium_to_professional.sql  fix_sessions_index.sql  fix_trial_update.sql
backend/src/: api.rs  auth_api.rs  cleanup.rs  contracts.rs  database.rs  email_service.rs  laws.rs  legal_parser.rs  main.rs  models.rs  revenuecat.rs  scraper.rs  sessions.rs  simple_auth.rs  webhooks.rs
backend_implementation/: INTEGRATION_GUIDE.md  requirements.txt
backend_implementation/handlers/: question_handler.py
backend_implementation/prompts/: system_prompt.txt
backend_implementation/routes/: contracts.py
backend_implementation/utils/: contract_detector.py  contract_type_detector.py  docx_generator.py  file_cleanup.py
fastlane/: Fastfile
landing-page/: cene.html  desktop.html  download.html  index.html  kontakt.html  mobile.html  preuzmi.html  privatnost.html  script.js  style.css  uslovi.html
public/: .htaccess  manifest.json  reset-password.html  templates.json  verify-email.html
public/.well-known/: apple-app-site-association  assetlinks.json
public/auth/: callback.html  redirect.html
public/templates/obracuni/: DOKUMENTI-OBRACUNI-Obracun_dopunski_rad.xlsx  Interni-obracun-PDV.xlsx  OBRACUN_licne_zarade_preduzetnika.xlsx  Obracun-troskova-sluzbenog-putovanja.xlsx  Obracun_amortizacije.xlsx  Obracun_kursne_razlike.xlsx  Obracun_zakupnine.xlsx  Obracun_zarade.xlsx  Prevoz.xlsx
public/templates/obrasci/: OP.docx  obrazac_kpo.docx  (+2 more)
scraper/: README.md  scraper.py
scripts/: generate-all-icons.js  generate-ico-icns.js
src/: App.css  App.jsx  debug.css  main.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/android/: build.gradle.kts
src-tauri/android/src/main/: AndroidManifest.xml
src-tauri/android/src/main/java/com/nikola/normaai/: IAPService.kt
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/ios/: Package.swift
src-tauri/ios/Sources/: IAPBridge.swift  IAPFFIBridge.swift
src-tauri/src/: lib.rs  main.rs  simple_iap.rs  webview_helper.rs
src/components/: AccountDeletionSuccessDialog.jsx  AnnouncementBar.css  AnnouncementBar.jsx  AuthCallback.jsx  AuthModal.jsx  AuthPage.css  AuthPage.jsx  ChatArea.css  ChatArea.jsx  ConfirmDialog.jsx  ContractDownloadButton.css  ContractDownloadButton.jsx  DeleteAccountModal.jsx  ErrorDialog.jsx  Icons.jsx  InfoDialog.jsx  LawSelector.css  LawSelector.jsx  MessageBubble.css  MessageBubble.jsx  Modal.css  Modal.jsx  PasswordResetPage.css  PasswordResetPage.jsx  PlanSelectionModal.css  PlanSelectionModal.jsx  SettingsModal.css  SettingsModal.jsx  Sidebar.css  Sidebar.jsx  Skeleton.css  Skeleton.jsx  SubscriptionManagementModal.jsx  TemplateLibraryModal.css  TemplateLibraryModal.jsx  UpdateChecker.css  UpdateChecker.jsx
src/config/: google-oauth.js  products.js
src/contexts/: ThemeContext.jsx
src/services/: api.js  simple_iap.js  subscriptions.js
src/utils/: cyrillicToLatin.js  deviceFingerprint.js  fileTextExtractor.js  keyboardDebug.js  persistentStorage.js
(+11 files in other folders)
