[package]
name = "norma-ai-backend"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "norma-ai-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid", "ipnetwork"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
scraper = "0.20"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
ammonia = "3.3"
supabase-auth = "0.10"
rand = "0.8"
sha2 = "0.10"
ipnetwork = "0.20"
docx-rs = "0.4"