[package]
name = "norma-ai"
version = "0.3.58"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "norma_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"

# iOS-specific dependencies for keyboard scroll prevention
# No explicit version constraints - use versions from Tauri's dependency tree
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = { version = "0.6" }
objc2-core-foundation = { version = "0.3" }
objc2-foundation = { version = "0.3" }
objc2-ui-kit = { version = "0.3" }
block2 = { version = "0.6" }

