[package]
name = "norma-ai"
version = "0.4.26"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "norma_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2"
# Pin schemars to 0.8.21 to avoid incompatibility with indexmap 1.9.3
schemars = "=0.8.21"

# OAuth for Desktop: Localhost callback server (Windows, macOS, Linux)
[target.'cfg(not(any(target_os = "ios", target_os = "android", target_family = "wasm")))'.dependencies]
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "v2" }

# OAuth for Mobile: ASWebAuthenticationSession (iOS), Custom Tabs (Android)
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri-plugin-web-auth = "1.0"

# iOS-specific dependencies for keyboard scroll prevention
# No explicit version constraints - use versions from Tauri's dependency tree
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = { version = "0.6" }
objc2-core-foundation = { version = "0.3" }
objc2-foundation = { version = "0.3" }
objc2-ui-kit = { version = "0.3" }
block2 = { version = "0.6" }

# Patch wry to use version with iOS WebView process termination fix
# This fixes the blank screen issue when iOS kills the WebContent process
# PR: https://github.com/tauri-apps/wry/pull/1624
[patch.crates-io]
wry = { git = "https://github.com/tauri-apps/wry", branch = "dev" }


